--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <body>
     
 </body>
-<script type="text/javascript" src="scripts/script.js"></script>
+<script type="text/javascript" src="scripts/script_03.js"></script>
 </html>
