add pages with link to JS for all lessons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
   <title>JS module DL Academy</title>
 </head>
 <body>
-    
+  <div class="page lesson1">
+    <a href="pages/JS_HW_1.html">Homework number 1</a>
+  </div>
+  <div class="page lesson2">
+    <a href="pages/JS_HW_2.html">Homework number 2</a>
+  </div>
+  <div class="page lesson3">
+    <a href="pages/JS_HW_3.html">Homework number 3</a>
+  </div>
+  <div class="page lesson4">
+    <a href="pages/JS_HW_4.html">Homework number 4</a>
+  </div>
+  <div class="page lesson5">
+    <a href="pages/JS_HW_5.html">Homework number 5</a>
+  </div>
+  <div class="page lesson6">
+    <a href="pages/JS_HW_6.html">Homework number 6</a>
+  </div>
+  <div class="page lesson7">
+    <a href="pages/JS_HW_7.html">Homework number 7</a>
+  </div>
+  <div class="page lesson8">
+    <a href="pages/JS_HW_8.html">Homework number 8</a>
+  </div>
 </body>
-<script type="text/javascript" src="scripts/script_03.js"></script>
 </html>
